--- a/terryStops.ipynb
+++ b/terryStops.ipynb
@@ -4,9 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#  Overview\n",
+    "# Final Project Submission\n",
     "\n",
-    "The Terry Stops problem aims to predict the outcome of police stops based on reasonable suspicion using a classification model. The model considers various factors such as presence of weapons, time of day, and possibly gender and race of both the officer and the subject. However, the use of race and gender data raises ethical concerns and the importance of avoiding bias and discrimination must be taken into consideration. The goal of this model is to improve the efficiency and fairness of law enforcement actions, but the agencies must also monitor and address any potential biases."
+    "Student name: Pascalia Maiga\n",
+    "\n",
+    "Student pace: Full time\n",
+    "\n",
+    "__Scheduled project review date/time: N/A\n",
+    "\n",
+    "__Instructor name: Maryann Mwikali\n",
+    "\n",
+    "__Blog post URL:N/A"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Overview\n",
+    "\n",
+    "The Terry Stops problem involves developing a classification model to predict the outcomes of police stops based on reasonable suspicion. This model takes into account several factors, including the presence of weapons, the time of day, and potentially the gender and race of both the officer and the individual stopped. However, incorporating race and gender data introduces ethical concerns, necessitating careful consideration to prevent bias and discrimination. The objective is to enhance the efficiency and fairness of law enforcement actions, while also ensuring that agencies continually monitor and address any potential biases in the model."
    ]
   },
   {
@@ -21,7 +38,7 @@
    "metadata": {},
    "source": [
     "## 1.1. Problem\n",
-    "The Terry Stops presents a business opportunity to improve the efficiency and fairness of law enforcement actions. By developing a predictive model that can assist officers in determining the likelihood of an arrest being made during a Terry Stop, the law enforcement agencies can make informed decisions and potentially reduce the number of false arrests and incidents of police misconduct. However, it is important to approach this problem with caution and transparency, considering the ethical concerns raised by the use of gender and race data. The goal is to provide a tool that can help improve policing, while avoiding biases and discrimination."
+    "The Terry Stops project offers a business opportunity to enhance the efficiency and fairness of law enforcement activities. By creating a predictive model to help officers assess the likelihood of an arrest during a Terry Stop, law enforcement agencies can make more informed decisions, potentially reducing false arrests and incidents of police misconduct. However, it is crucial to approach this task with caution and transparency due to the ethical issues surrounding the use of gender and race data. The aim is to develop a tool that aids in improving policing practices while actively avoiding bias and discrimination."
    ]
   },
   {
@@ -35,17 +52,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The aim of this project is to build a classifier that can predict the outcome of a Terry Stop (whether an arrest was made or not) based on reasonable suspicion. This will be done by considering various factors such as the presence of weapons, time of day of the call, and other relevant information. The model will be designed to address the binary classification problem, with the goal of improving the efficiency and fairness of law enforcement actions."
+    "The goal of this project is to create a classifier that predicts the outcome of a Terry Stop (whether an arrest occurs) based on reasonable suspicion. This will involve considering various factors such as the presence of weapons, the time of day, and other pertinent information. The model will tackle the binary classification problem, aiming to enhance the efficiency and fairness of law enforcement actions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1.3. 0bjectives\n",
-    "* To create a predictive model for Terry Stops that accurately predicts the outcome of the stop (arrest made or not)\n",
-    "* To take into consideration key factors such as the presence of weapons and the time of the call in the model\n",
-    "* To ensure that the model is ethically sound and avoids any biases or discrimination related to gender and race."
+    "## 1.3. Objectives\n",
+    "* Develop a predictive model for Terry Stops that accurately determines the outcome (whether an arrest is made)\n",
+    "* Incorporate key factors into the model, such as the presence of weapons and the time of the call\n",
+    "* Ensure the model is ethically sound, avoiding any biases or discrimination based on gender and race."
    ]
   },
   {
@@ -60,9 +77,7 @@
    "metadata": {},
    "source": [
     "## 2.1 Data Understanding\n",
-    "This dataset was provided by the City of Seattle and is managed by the Seattle Police Department. It was created on April 13, 2017 and last updated on February 6, 2023. The dataset contains **54873**, rows and **23** columns, each row representing a unique Terry Stop record as reported by the officer conducting the stop. The columns in the dataset include information about the subject of the stop, such as the perceived age group, perceived race, and perceived gender. \n",
-    "\n",
-    "The dataset also includes information about the officer, such as the officer's gender, race, and year of birth. Additionally, the dataset includes information about the resolution of the stop, any weapons found, the date and time the stop was reported, and information about the underlying Computer Aided Dispatch (CAD) event. The data is updated daily and is licensed under the public domain."
+    "This dataset, provided by the City of Seattle and managed by the Seattle Police Department, was created on April 13, 2017, and last updated on February 6, 2023. It comprises **54,873** rows and **23** columns, with each row representing a unique Terry Stop record reported by the conducting officer. The dataset includes details about the stopped individual, such as perceived age group, race, and gender, as well as information about the officer, including gender, race, and year of birth. Additionally, it encompasses details regarding the stop resolution, any discovered weapons, the date and time of the stop report, and information about the associated Computer Aided Dispatch (CAD) event. The data is refreshed daily and is released under the public domain license."
    ]
   },
   {
@@ -1051,7 +1066,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The general classification of firearms can be based on the following criteria: Level of harm they produce. Lethal - designed with the intent to eventually kill the target. Non-lethal - designed with the intent to scare or incapacitate the target, without killing or producing major, irreversible injuries."
+    "Firearms can generally be classified based on the level of harm they inflict: \n",
+    "- **Lethal**: Designed with the intent to ultimately kill the target.\n",
+    "- **Non-lethal**: Designed to scare or incapacitate the target without causing death or significant, irreversible injuries."
    ]
   },
   {
@@ -2221,10 +2238,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.1. Baseline model\n",
-    "    Logistic Regression model\n",
-    "    \n",
-    "I have chosen Logistic Regression as the starting point for the binary classification problem. Logistic Regression is an ideal choice for a baseline model as it is simple to implement and provides a quick evaluation of the relationship between the independent variables and the dependent variable, which in our case is stop resolution. This statistical method is widely used in various fields and is known to deliver good results in many binary classification problems, especially when the relationship between the variables is linear. By utilizing Logistic Regression, we can gain valuable insights into the underlying relationships in our data and make informed decisions on how to enhance our model moving forward.    "
+    "### 5.1. Baseline Model\n",
+    "    Logistic Regression Model\n",
+    "\n",
+    "I have selected Logistic Regression as the starting point for this binary classification problem. Logistic Regression is an excellent choice for a baseline model due to its simplicity and effectiveness in quickly evaluating the relationship between independent variables and the dependent variable, which in this case is the stop resolution. This statistical method is widely used across various fields and is known for delivering reliable results in many binary classification problems, particularly when the relationship between the variables is linear. By employing Logistic Regression, we can gain valuable insights into the underlying relationships within our data and make informed decisions on how to improve our model moving forward."
    ]
   },
   {
@@ -2577,15 +2594,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I evaluate how well the prediction model is working. For this evaluation, the most important metrics are recall and precision.\n",
+    "I evaluate the performance of the prediction model using key metrics, with recall and precision being the most important.\n",
     "\n",
-    "**Recall** measures how many arrests the model correctly identified, out of all the actual arrests that happened. A high recall value means that the model is good at finding all the arrests, and not missing any. This is exactly how I inted my model to help n solving the real problem by cirrectly indicating an arrest.\n",
+    "**Recall** measures the proportion of actual arrests that the model correctly identified. A high recall value indicates that the model is effective at detecting all arrests, ensuring that none are missed. This aligns with my goal of having the model accurately indicate when an arrest is likely to occur.\n",
     "\n",
-    "**Precision** measures how many of the predictions made by the model were actually correct. A high precision value means that the model is good at not making any false predictions, such as predicting that an arrest was made when it actually wasn't.\n",
+    "**Precision** measures the proportion of correct predictions among all predictions made by the model. A high precision value means that the model minimizes false positives, correctly predicting arrests without mistakenly indicating an arrest when there wasn't one.\n",
     "\n",
-    "**F1** score, which balances recall and precision and provides a single score to evaluate the model. The F1 score gives a good overall picture of how well the model is doing in finding all the arrests and not making false predictions.\n",
+    "The **F1 score** balances recall and precision, providing a single score to evaluate the model. It offers a comprehensive view of the model's performance in accurately identifying arrests while avoiding false predictions.\n",
     "\n",
-    "By using these metrics, I can compare different models and choose the best one for making predictions about arrests during Terry stops."
+    "By utilizing these metrics, I can compare different models and select the most effective one for predicting arrests during Terry Stops."
    ]
   },
   {
@@ -2905,9 +2922,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This conclusion suggests that the model is placing a significant emphasis on the outcome of the Terry stop (i.e., whether an arrest was made or not) and the use of force during the stop (i.e., whether a frisk was conducted). The type of call and the year of the stop also play a role in the predictions made by the model.\n",
+    "This conclusion indicates that the model heavily focuses on the outcome of the Terry stop (i.e., whether an arrest was made) and the use of force during the stop (i.e., whether a frisk was conducted). Additionally, the type of call and the year of the stop are significant factors in the model's predictions.\n",
     "\n",
-    "In conclusion, the results of this project indicate that machine learning models can be effectively used to analyze Terry stop data to determine resolution arrests. The model has successfully identified the most important features for making predictions, which can provide valuable insights for policymakers and law enforcement agencies. However, it's important to keep in mind that this is just one part of the overall analysis and further investigation may be required to gain a more comprehensive understanding of the data."
+    "In summary, the results of this project demonstrate that machine learning models can effectively analyze Terry stop data to predict resolution arrests. The model has successfully identified the key features for making predictions, offering valuable insights for policymakers and law enforcement agencies. However, it is important to remember that this is only one aspect of the overall analysis, and further investigation may be needed to achieve a more comprehensive understanding of the data."
    ]
   },
   {
@@ -2916,18 +2933,16 @@
    "source": [
     "## 8. Recommendations\n",
     "\n",
-    "1. Train officers on the appropriate times to make an arrest during a Terry Stop as this is a key indicator of arrests.\n",
-    "Try to capture the officer's precinct for all Terry Stops to better predict arrests.\n",
-    "Train officers on the appropriate times to frisk someone, as this is another key indicator of arrests.\n",
+    "1. Train officers on the appropriate circumstances for making arrests during Terry Stops, as this is a key factor in predicting arrests. Ensure that the officer's precinct is captured for all Terry Stops to enhance arrest prediction accuracy. Additionally, train officers on the appropriate situations for conducting frisks, another significant predictor of arrests.\n",
     "\n",
-    "2. Address any biases in the data: The model's predictions may be influenced by biases in the data. For example, there may be biases in the distribution of Terry stops based on race, gender, or location. These biases should be identified and addressed to ensure that the model provides fair and unbiased predictions. \n",
+    "2. Address biases in the data: The model's predictions might be influenced by biases present in the data, such as those based on race, gender, or location. Identifying and addressing these biases is crucial to ensure that the model provides fair and unbiased predictions.\n",
     "\n",
     "**Next Steps:**\n",
-    "Although 84% accuracy is decent, there is still room for improvement. To increase accuracy, the model could be further fine-tuned through data cleaning or adjusting the model inputs. Additionally, exploring other classification models, such as deep learning models, could lead to a more accurate prediction.\n",
+    "While an 84% accuracy rate is decent, there is potential for improvement. Enhancing the model's accuracy could involve further data cleaning or adjusting the model inputs. Exploring other classification models, such as deep learning models, could also yield more accurate predictions.\n",
     "\n",
-    "Further analysis of the data: While the machine learning model has identified the most important features for predictions, further analysis may be required to gain a deeper understanding of the data and to identify any potential biases or correlations between features.\n",
+    "Further data analysis: Although the machine learning model has pinpointed the most important features for predictions, additional analysis is necessary to gain a deeper understanding of the data and identify any potential biases or correlations between features.\n",
     "\n",
-    "In conclusion, the Terry stop project has shown the potential for machine learning models to be used for analyzing Terry stop data. However, it is important to continuously monitor and evaluate the performance of the model to ensure that it remains accurate and relevant over time."
+    "In conclusion, the Terry Stop project has demonstrated the potential for using machine learning models to analyze Terry Stop data. However, it is essential to continuously monitor and evaluate the model's performance to ensure it remains accurate and relevant over time."
    ]
   }
  ],
