--- a/terryStops.ipynb
+++ b/terryStops.ipynb
@@ -1264,7 +1264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The columns 'Precinct', 'Sector', and 'Beat' represent the location of a Terry Stop event. To better understand the relationship between location and outcome (whether an arrest was made or not), we can combine these three columns into one new column. This new column will have different categories, each category representing a unique combination of values from the three original columns. This new column can then be used in our analysis and modeling to see if there is a relationship between location and outcome."
+    "To better understand the relationship between location and the outcome of a Terry Stop event (i.e., whether an arrest was made or not), we can combine the 'Precinct', 'Sector', and 'Beat' columns into a single new column. This new column will represent unique combinations of the values from the three original columns. By creating these categories, we can analyze and model the data to explore if there's a significant connection between specific locations and the outcomes of the Terry Stop events."
    ]
   },
   {
@@ -2228,7 +2228,7 @@
     "# 5. Modelling\n",
     "\n",
     "Modelling is the process of creating a mathematical representation of a real-world phenomenon. Modelling involves training a model on a dataset and using it to make predictions on new data. \n",
-    "These are the algorithims are I will used in my modelling:\n",
+    "These are the algorithims that I will use in my modelling:\n",
     "* Logistic Regression - baseline\n",
     "* Random Forest Classifier\n",
     "* Suport Vector Machine"
@@ -2241,7 +2241,7 @@
     "### 5.1. Baseline Model\n",
     "    Logistic Regression Model\n",
     "\n",
-    "I have selected Logistic Regression as the starting point for this binary classification problem. Logistic Regression is an excellent choice for a baseline model due to its simplicity and effectiveness in quickly evaluating the relationship between independent variables and the dependent variable, which in this case is the stop resolution. This statistical method is widely used across various fields and is known for delivering reliable results in many binary classification problems, particularly when the relationship between the variables is linear. By employing Logistic Regression, we can gain valuable insights into the underlying relationships within our data and make informed decisions on how to improve our model moving forward."
+    "I have chosen Logistic Regression as the initial approach for this binary classification problem. Logistic Regression is a great starting point due to its simplicity and efficiency in evaluating the relationship between the independent variables and the dependent variable, which, in this case, is the stop resolution. This method is widely utilized in various fields and is known for providing reliable results in numerous binary classification problems, especially when the relationship between the variables is linear. Using Logistic Regression, we can gain valuable insights into the underlying relationships in our data and make informed decisions on how to enhance our model moving forward."
    ]
   },
   {
@@ -2792,11 +2792,11 @@
     "* 1142 observations were incorrectly predicted as 0 (False Negatives)\n",
     "* 1619 observations were correctly predicted as 1 (True Positives)\n",
     "\n",
-    "Based on these results, it appears that the model performed relatively well, with a higher number of correct predictions than incorrect predictions. However, the high number of false negatives and false positives indicates that the model may not be perfect and may benefit from further tuning or improvement.\n",
+    " Based on these results, it seems the model performed fairly well, achieving a higher number of correct predictions than incorrect ones. However, the significant number of false negatives and false positives suggests that the model could benefit from further refinement or enhancement.\n",
     "\n",
-    "The  model to classify resolution arrest appears to have performed reasonably well in its predictions. With 7851 true negatives and 1619 true positives, the model correctly predicted the majority of the cases. However, the presence of 358 false positives and 1142 false negatives indicates that the model is not perfect and may benefit from further improvement.\n",
+    "The model designed to classify resolution arrests performed reasonably well, with 7,851 true negatives and 1,619 true positives, accurately predicting the majority of cases. Nonetheless, the presence of 358 false positives and 1,142 false negatives indicates that there is room for improvement.\n",
     "\n",
-    "Overall, the confusion matrix provides a valuable summary of the model's performance and can be used to guide further efforts to improve the model's accuracy. The high number of false negatives and false positives suggests that the model may be overfitting or underfitting the data, and adjusting the model's parameters or collecting more data may help to improve its performance.  "
+    "Overall, the confusion matrix offers a valuable summary of the model's performance and can guide efforts to enhance its accuracy. The substantial number of false negatives and false positives suggests potential overfitting or underfitting issues. Adjusting the model's parameters or gathering more data may help improve its performance."
    ]
   },
   {
@@ -2901,14 +2901,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This table lists the top features that have the highest importance in the Terry stop project based on the trained machine learning model.\n",
+    "This table highlights the top features with the highest importance in the Terry stop project, based on the trained machine learning model.\n",
     "\n",
-    "* The feature **Arrest Flag** has the highest importance with a score of 7.12. This suggests that the model places a strong emphasis on this feature when making predictions.\n",
-    "* The feature **Frisk Flag** has a lower importance score of 0.24, indicating that it is still a relevant feature but to a lesser extent compared to the arrest flag.\n",
-    "* The feature **Year** has an importance score of 0.14, which is also considered to be of moderate importance in the model's predictions.\n",
-    "* The Call Type_ONVIEW feature has a score of 0.12, which implies that the type of call can also play a role in the predictions made by the model.\n",
-    "* The remaining features listed are all related to the month and have relatively lower importance scores. This suggests that the month of the Terry stop is less important compared to other features such as arrest flag and frisk flag.\n",
-    ">Based on this table, the model considers the arrest flag and frisk flag to be the most important features in determining resolution arrests, while the type of call and the year of the Terry stop also play a role. The month of the Terry stop is relatively less important, but still a relevant feature to some extent"
+    "* The feature **Arrest Flag** holds the highest importance with a score of 7.12, indicating that the model heavily relies on this feature for predictions.\n",
+    "* The feature **Frisk Flag** has a lower importance score of 0.24, suggesting it is still relevant but less influential than the arrest flag.\n",
+    "* The feature **Year** has an importance score of 0.14, showing moderate significance in the model's predictions.\n",
+    "* The **Call Type_ONVIEW** feature has a score of 0.12, indicating that the type of call also contributes to the model's predictions.\n",
+    "* The remaining features, all related to the month, have relatively lower importance scores, suggesting that while the month of the Terry stop is less critical compared to other features like the arrest flag and frisk flag, it remains somewhat relevant.\n",
+    "\n",
+    "Overall, the model considers the arrest flag and frisk flag as the most important features in determining resolution arrests, while the type of call and the year of the Terry stop also play a role. The month of the Terry stop is relatively less important but still a relevant feature to some extent."
    ]
   },
   {
@@ -2922,9 +2923,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This conclusion indicates that the model heavily focuses on the outcome of the Terry stop (i.e., whether an arrest was made) and the use of force during the stop (i.e., whether a frisk was conducted). Additionally, the type of call and the year of the stop are significant factors in the model's predictions.\n",
+    "This conclusion reveals that the model places significant emphasis on the outcome of the Terry stop (i.e., whether an arrest was made) and the use of force during the stop (i.e., whether a frisk was conducted). Additionally, the type of call and the year of the stop are notable factors in the model's predictions.\n",
     "\n",
-    "In summary, the results of this project demonstrate that machine learning models can effectively analyze Terry stop data to predict resolution arrests. The model has successfully identified the key features for making predictions, offering valuable insights for policymakers and law enforcement agencies. However, it is important to remember that this is only one aspect of the overall analysis, and further investigation may be needed to achieve a more comprehensive understanding of the data."
+    "In summary, the project results demonstrate that machine learning models can effectively analyze Terry stop data to predict resolution arrests. The model has successfully identified the key features for making predictions, providing valuable insights for policymakers and law enforcement agencies. However, it is crucial to recognize that this is just one aspect of the overall analysis, and further investigation may be necessary to gain a more comprehensive understanding of the data."
    ]
   },
   {
